--- a/styles.css
+++ b/styles.css
@@ -28,12 +28,16 @@
   font-weight: var(--font-weight);
   box-sizing: border-box;
   line-height: var(--line-height);
+  padding: 0;
+  margin: 0;
 }
 
 body {
-  height: 100vh;
   display: flex;
   justify-content: center;
+  height: 100vh;
+  width: 100%;
+  background-color: black;
 }
 
 .profile-image {
@@ -49,7 +53,50 @@ body {
 }
 
 .main-content {
+  display: flex;
+  justify-content: center;
+}
+
+.background-image {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+  position: absolute;
+  background-image: url("./public/images/background.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: blur(25px);
+  box-shadow: inset 1px 0px 4px 1px black;
+
+  & .vinhete {
+    background-color: black;
+    width: 100%;
+    height: 3rem;
+    filter: blur(14px);
+  }
+}
+
+.background-image-centered {
+  position: absolute;
+  z-index: -1;
+  height: 100vh;
+  width: 100%;
   background-image: url("./public/images/background.png");
   background-repeat: no-repeat;
   background-size: contain;
+  background-position: center;
+}
+
+.overlay {
+  z-index: 1;
+  position: absolute;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.38);
+  height: 65%;
+  width: 100%;
+  filter: blur(50px);
 }
