--- a/styles.css
+++ b/styles.css
@@ -52,11 +52,6 @@ body {
   background-image: url("./public/images/ai-profile.png");
 }
 
-.main-content {
-  display: flex;
-  justify-content: center;
-}
-
 .background-image {
   display: flex;
   flex-direction: column;
@@ -82,13 +77,16 @@ body {
 
 .background-image-centered {
   position: absolute;
-  z-index: -1;
   height: 100vh;
-  width: 100%;
-  background-image: url("./public/images/background.png");
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: center;
+  width: 700px;
+
+  & img {
+    width: 100%;
+    position: inherit;
+    height: inherit;
+    z-index: -1;
+    object-fit: cover;
+  }
 }
 
 .overlay {
@@ -99,4 +97,12 @@ body {
   height: 65%;
   width: 100%;
   filter: blur(50px);
+}
+
+.character-image-and-name {
+  display: flex;
+  justify-self: start;
+  color: white;
+  gap: 15px;
+  font-weight: bold;
 }
