--- a/styles.css
+++ b/styles.css
@@ -18,8 +18,8 @@
   --font-weight: 400;
   --line-height: 1.5;
 
-  --profile-image-width: 30px;
-  --profile-image-height: 30px;
+  --profile-image-width: 36px;
+  --profile-image-height: 36px;
 }
 
 * {
@@ -43,13 +43,12 @@ body {
 .profile-image {
   width: var(--profile-image-width);
   height: var(--profile-image-height);
-  border-radius: 100%;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
 
-.character-profile-image {
-  background-image: url("./public/images/ai-profile.png");
+  & img {
+    border-radius: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
 }
 
 .background-image {
@@ -78,7 +77,7 @@ body {
 .background-image-centered {
   position: absolute;
   height: 100vh;
-  width: 700px;
+  width: 736px;
 
   & img {
     width: 100%;
@@ -99,10 +98,31 @@ body {
   filter: blur(50px);
 }
 
+.name-and-member-count {
+  display: flex;
+  width: fit-content;
+  flex-direction: column;
+  align-items: center;
+  gap: 0;
+
+  & .member-count {
+    color: rgb(179, 179, 179);
+    font-size: smaller;
+  }
+}
+
 .character-image-and-name {
   display: flex;
   justify-self: start;
   color: white;
   gap: 15px;
   font-weight: bold;
+
+  & span {
+    font-weight: 500;
+  }
+}
+
+.main-content {
+  padding: 16px;
 }
