--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,8 @@ body {
 .main-content {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
   gap: 24px;
   padding: 16px;
 }
@@ -184,4 +186,44 @@ body {
 }
 .user-action-text {
   color: var(--user-action-text-color);
+}
+
+.input-message-container {
+  z-index: 2;
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  justify-content: center;
+  /* background-color: red; */
+  height: fit-content;
+  width: 105%;
+}
+
+.input-message-continue-button-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgba(0, 0, 0, 0.9);
+  padding: 12px;
+  border: rgba(100, 100, 100, 0.5) 2px solid;
+  border-radius: 24px;
+  color: white;
+  font-weight: 500;
+  width: 100%;
+  gap: 8px;
+
+  & textarea {
+    background: none;
+    outline: none;
+    border: none;
+    resize: none;
+    color: white;
+    font-weight: 500;
+    width: 100%;
+  }
+
+  & span {
+    display: flex;
+    gap: 4px;
+  }
 }
